# Industrial-AI-Harness-Platform

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.omx.yml  compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260227_0001_create_jobs_table.py  20260227_0002_create_worker_heartbeats_table.py  20260302_0003_extend_jobs_for_rag_reindex.py
apps/api/src/api/: __init__.py  config.py  db.py  ingest.py  llm.py  main.py  models.py
apps/api/src/api/services/: __init__.py
apps/api/src/api/services/rag/: __init__.py  chunker.py  embedder.py  embedding_client.py  incremental_reindex_job_runner.py  index_store.py  ingest.py  loader.py  query.py  reindex_job_runner.py  sqlite_store.py  types.py
apps/api/tests/: conftest.py  test_ask.py  test_config.py  test_embedding_client.py  test_incremental_reindex_runner.py  test_jobs.py  test_rag_ingest.py  test_rag_reindex_api.py  test_rag_reindex_runner.py  test_rag_search.py  test_rag_sqlite_store.py
apps/worker/: pyproject.toml
apps/worker/src/worker/: __init__.py  main.py
apps/worker/tests/: test_heartbeat_upsert.py  test_job_processing.py
data/sample_docs/: getting_started.txt  maintenance.md
shared/db/: interface.py
