[project]
name = "industrial-ai-api"
version = "0.1.0"
description = "FastAPI service for Industrial AI Harness Platform"
requires-python = "==3.11.*"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
api = "api.main:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
