[project]
name = "industrial-ai-api"
version = "0.1.0"
description = "FastAPI service for Industrial AI Harness Platform"
requires-python = "==3.11.*"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
api = "api.main:run"
rag-ingest = "api.ingest:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/api"]
sources = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
