[project]
name = "industrial-ai-worker"
version = "0.1.0"
description = "Background worker for Industrial AI Harness Platform"
requires-python = "==3.11.*"
dependencies = []

[project.scripts]
worker = "worker.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
