[project]
name = "industrial-ai-worker"
version = "0.1.0"
description = "Background worker for Industrial AI Harness Platform"
requires-python = "==3.11.*"
dependencies = [
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
]

[project.scripts]
worker = "worker.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
